# game-budget

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  flake.nix  justfile  pyproject.toml
deploy/: game-budget.service
docs/: README.md  application.md  getting-started.md  operations.md  roadmap.md  smoke-test.md  troubleshooting.md
samples/: README.md
samples/reference/: Game-Budget.html
src/game_budget/: __init__.py  auth.py  cli.py  config.py  main.py  service.py
src/game_budget/ledger/: activity.py  balances.py  journal.py  periodic.py  transactions.py
src/game_budget/web/: routes_admin.py  routes_kiosk.py
src/game_budget/web/static/: kiosk.css
src/game_budget/web/templates/: kiosk.html
src/game_budget/web/templates/admin/: index.html  login.html
tests/: test_activity.py  test_boys_compat.py  test_config.py  test_journal_compat.py
