[project]
name = "game-budget"
version = "0.1.0"
description = "LAN game budget kiosk with ledger-cli accounting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "bcrypt>=4.2",
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
game-budget = "game_budget.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/game_budget/web/static" = "game_budget/web/static"
"src/game_budget/web/templates" = "game_budget/web/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
